--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <h1>Contact Info</h1>
         <ul>
             <li><b>Email:</b><a href="#">meagenlynn07@gmail.com</a></li>
-            <li><b>GitHub</b><a href="#">magenlynn</a></li>
-            <li><b>Portfolio</b><a href="#">Coming Soon</a></li>
+            <li><b>GitHub:</b><a href="#">meagenlynn</a></li>
+            <li><b>Portfolio:</b><a href="#">Coming Soon</a></li>
         </ul>
     </body>
 </html>
